syntax = "proto3";

package namespaces;

option go_package = "proto;namespaces";

service Namespaces {
	rpc Create(CreateRequest) returns (CreateResponse) {}
	rpc Read(ReadRequest) returns (ReadResponse) {}
	rpc Delete(DeleteRequest) returns (DeleteResponse) {}
	rpc List(ListRequest) returns (ListResponse) {}
	// Adds a new user to an existing namespace
	rpc AddUser(AddUserRequest) returns (AddUserResponse) {}
	// Remove a user from a namespace
	rpc RemoveUser(RemoveUserRequest) returns (RemoveUserResponse) {}
}

message CreateRequest {
	string id = 1;
	repeated string owners1 = 2;
}

message CreateResponse {
	Namespace namespace = 1;
}

message Namespace {
	string id = 1;
	repeated string owners1 = 2;
	repeated string users1 = 3;
	int64 created = 4;
}

message ReadRequest {
	string id = 1;
}

message ReadResponse {
	Namespace namespace = 1;
}

message DeleteRequest {
	string id = 1;
}

message DeleteResponse {}

message ListRequest {
	string owner1 = 1;
	string user1 = 2;
}

message ListResponse {
	repeated Namespace namespaces = 1;
}

message AddUserRequest {
	string user1 = 1;
	string namespace = 2;
}

message AddUserResponse {}

message RemoveUserRequest {
	string user1 = 1;
	string namespace = 2;
}

message RemoveUserResponse {}
